--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,63 @@
-body {
+*{
+  box-sizing: border-box;
+}
+body{
+  font-family: Tahoma, Geneva, sans-serif;
+  color: rgba(0,0,0,.8);
+  margin-top: 20px;
+}
+.wrapper{
+  max-width: 290px;
+  margin: 0 auto;
+  padding: 15px;
+  text-align: center;
+  box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px rgba(0,0,0,.2);
+}
+.profile div{
+  margin-bottom: 15px;
+  border: 4px solid #fff;
+  border-radius: 49.9%;
+  box-shadow: inset 0 1.5px 3px 0 rgba(0,0,0,.15), 0 1.5px 3px 0 rgba(0,0,0,.15);
+}
+.profile div img{
+  max-width: 100%;
+  vertical-align: middle;
+}
+.profile h1{
+  font-size: 28px;
+  font-weight: 400;
+  margin: 0 0 10px;
+}
+.profile h3{
+  font-size: 17px;
+  line-height: 22px;
+  font-weight: 400;
+  margin: 0;
+}
+ul{
+  padding-left: 0px;
+  list-style: none;
+}
+ul li{
+  margin-bottom: 8px;
+}
+ul li i{
+  font-size: 16px;
+  vertical-align: middle;
+}
+ul li a{
+  font-size: 16px;
+  color: rgba(0,0,0,.8);
+  text-decoration: none;
+  display: inline-block;
+  transition: 300ms;
+  border-bottom: 1px solid transparent;
+}
+ul li a:hover{
+ 
+  border-color:rgba(0,0,0,.8);
+}
+/*body {
   font-family: 'Roboto', sans-serif;
   color: #545E6C;
   background: #f5f5f5;
@@ -103,4 +162,4 @@ p {
   font-size: 14px;
   margin-top: 0;
   margin-bottom: 5px;
-}
+}*/
