--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,12 @@ body{
   border: 4px solid #fff;
   border-radius: 49.9%;
   box-shadow: inset 0 1.5px 3px 0 rgba(0,0,0,.15), 0 1.5px 3px 0 rgba(0,0,0,.15);
+  height: 252px;
 }
 .profile div img{
   max-width: 100%;
   vertical-align: middle;
+  opacity: 0.9;
 }
 .profile h1{
   font-size: 28px;
